--- a/index.html
+++ b/index.html
@@ -36,7 +36,15 @@
   </div>
 </div>
 <div class="container-fluid">
+  <div class="row">
+  <div class="col-12">
   <h1>¿Que son?</h1>
+  <p> El nombre cientifico de este specimen es Omarus Lopus, una variante del babuino africano que crecion al norte de México. Esta criatura representa una pequeña población de la fauna
+    del estado de Chihuahua, aunque es facil encontrarse a estos especimenes en sus hábitats naturales, debido a que se le conoce por un extraordinario sedentarismo. Una de las cuestiones
+    que mas les sorprende a los científicos de esta especie, es que a pesar del mencionado sedentarismo, su ingesta de alimentos es masiva. Es un misterio lo que su cuerpo hace con las cantidades
+    exorbitantes de calorias que esta especie consume en un día.</p>
+  </div>
+  </div>
 </div>
 </body>
 </html>
