--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-<script src="Animales_Silvestres.css"></script>
-<script src="Animales_Silvestres.js"></script>
+<script src="Animales Silvestres/Animales_Silvestres.css"></script>
+<script src="Animales Silvestres/Animales_Silvestres.js"></script>
 <title>Animales silvestres</title>
 </head>
 <body>
@@ -39,19 +39,19 @@
     <div  id="Lanegraimages" class="carousel slide" data-ride="carousel">
    <div class="carousel-inner">
      <div class="carousel-item active">
-       <img class="d-block w-50 rounded mx-auto" src="La negra.jpg" alt="First slide" width="300" height="500">
+       <img class="d-block w-50 rounded mx-auto" src="Animales Silvestres/La negra.jpg" alt="First slide" width="300" height="500">
      </div>
      <div class="carousel-item">
-       <img class="d-block  rounded mx-auto" src="La negra lamiendo.jpg" alt="Second slide" width="400" height="500">
+       <img class="d-block  rounded mx-auto" src="Animales Silvestres/La negra lamiendo.jpg" alt="Second slide" width="400" height="500">
      </div>
      <div class="carousel-item">
-       <img class="d-block w-40 rounded mx-auto" src="Negrita.jpeg" alt="Third slide" width="400" height="500">
+       <img class="d-block w-40 rounded mx-auto" src="Animales Silvestres/Negrita.jpeg" alt="Third slide" width="400" height="500">
      </div>
      <div class="carousel-item">
-       <img class="d-block w-50 rounded mx-auto" src="Negra taquera.jpg" alt="Fourth slide" width="500" height="500">
+       <img class="d-block w-50 rounded mx-auto" src="Animales Silvestres/Negra taquera.jpg" alt="Fourth slide" width="500" height="500">
      </div>
      <div class="carousel-item">
-       <img class="d-block w-50 rounded mx-auto" src="Negro.png" alt="Fourth slide" width="500" height="500">
+       <img class="d-block w-50 rounded mx-auto" src="Animales Silvestres/Negro.png" alt="Fourth slide" width="500" height="500">
      </div>
    </div>
    <a class="carousel-control-prev" href="#Lanegraimages" role="button" data-slide="prev">
