--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           Whiskys
         </button>
       </h5>
-      <h1 align="center"><img src="Whisky.png" width="150" height="150"></h1>
+      <h1 align="center"><img src="Animales Silvestres/Whisky.png" width="150" height="150"></h1>
     </div>
 
     <div id="collapseWhisky" class="collapse" aria-labelledby="whiskys" data-parent="#accordion1">
