--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     whiskys.</p>
   </div>
     <div class="col-4">
-     <img src="Negra salvaje.jpg" class="img-responsive" width="300" height="300">
+     <img src="Animales Silvestres/Negra salvaje.jpg" class="img-responsive" width="300" height="300">
     </div>
   </div>
   <h1 id="Que_comen">¿Qué comen?</h1>
