--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           Cabrito
         </button>
       </h5>
-      <h1 align="center"><img src="Cabrito.png" width="150" height="150"></h1>
+      <h1 align="center"><img src="Animales Silvestres/Cabrito.png" width="150" height="150"></h1>
     </div>
 
     <div id="collapseCabrito" class="collapse" aria-labelledby="Cabrito" data-parent="#accordion">
@@ -148,7 +148,7 @@
           Alcoholes
         </button>
       </h5>
-      <h1 align="center"><img src="Alcoholes.jpg" width="150" height="150"></h1>
+      <h1 align="center"><img src="Animales Silvestres/Alcoholes.jpg" width="150" height="150"></h1>
     </div>
 
     <div id="collapseAlcoholes" class="collapse" aria-labelledby="Alcoholes" data-parent="#accordion2">
@@ -168,7 +168,7 @@
           Elotes
         </button>
       </h5>
-      <h1 align="center"><img src="Elotes.png" width="150" height="150"></h1>
+      <h1 align="center"><img src="Animales Silvestres/Elotes.png" width="150" height="150"></h1>
     </div>
 
     <div id="collapseElotes" class="collapse" aria-labelledby="Elotes" data-parent="#accordion3">
@@ -213,78 +213,78 @@
 
     <!-- Grid column -->
     <div class="m-3 pics animation all Joven">
-        <img class="img-fluid" src="Joven1.jpg" alt="Card image cap" width="200">
+        <img class="img-fluid" src="Animales Silvestres/Joven1.jpg" alt="Card image cap" width="200">
     </div>
     <!-- Grid column -->
 
     <!-- Grid column -->
     <div class="m-3 pics animation all Alcoholizado">
-        <img class="img-fluid" src="Alcoholizado1.jpg" alt="Card image cap" width="632">
+        <img class="img-fluid" src="Animales Silvestres/Alcoholizado1.jpg" alt="Card image cap" width="632">
     </div>
     <!-- Grid column -->
 
     <!-- Grid column -->
     <div class="m-3 pics animation all Maduro">
-        <img class="img-fluid" src="Maduro2.jpg" alt="Card image cap" width="200">
+        <img class="img-fluid" src="Animales Silvestres/Maduro2.jpg" alt="Card image cap" width="200">
     </div>
     <!-- Grid column -->
 
     <!-- Grid column -->
     <div class="m-3 pics animation all Joven">
-        <img class="img-fluid" src="Joven2.jpg" alt="Card image cap" width="500" >
+        <img class="img-fluid" src="Animales Silvestres/Joven2.jpg" alt="Card image cap" width="500" >
     </div>
     <!-- Grid column -->
 
     <!-- Grid column -->
     <div class="m-3 pics animation all Maduro">
-        <img class="img-fluid" src="Maduro1.jpg" alt="Card image cap" width="400">
+        <img class="img-fluid" src="Animales Silvestres/Maduro1.jpg" alt="Card image cap" width="400">
     </div>
     <!-- Grid column -->
 
     <!-- Grid column -->
     <div class="m-3 pics animation all Negreando">
-        <img class="img-fluid" src="Negreando1.jpeg" alt="Card image cap" width="300">
+        <img class="img-fluid" src="Animales Silvestres/Negreando1.jpeg" alt="Card image cap" width="300">
     </div>
     <!-- Grid column -->
 
     <!-- Grid column -->
     <div class="m-3 pics animation all Negreando">
-        <img class="img-fluid" src="Negreando2.jpg" alt="Card image cap" width="370">
+        <img class="img-fluid" src="Animales Silvestres/Negreando2.jpg" alt="Card image cap" width="370">
     </div>
     <!-- Grid column -->
     <!-- Grid column -->
     <div class="m-3 pics animation all Alcoholizado">
-        <img class="img-fluid" src="Alcoholizado2.jpeg" alt="Card image cap" width="370">
+        <img class="img-fluid" src="Animales Silvestres/Alcoholizado2.jpeg" alt="Card image cap" width="370">
     </div>
     <!-- Grid column -->
     <!-- Grid column -->
     <div class="m-3 pics animation all Negreando">
-        <img class="img-fluid" src="Negreando3.jpg" alt="Card image cap" width="370">
+        <img class="img-fluid" src="Animales Silvestres/Negreando3.jpg" alt="Card image cap" width="370">
     </div>
     <!-- Grid column -->
     <!-- Grid column -->
     <div class="m-3 pics animation all Joven">
-        <img class="img-fluid" src="Joven3.jpg" alt="Card image cap" width="400">
+        <img class="img-fluid" src="Animales Silvestres/Joven3.jpg" alt="Card image cap" width="400">
     </div>
     <!-- Grid column -->
     <!-- Grid column -->
     <div class="m-3 pics animation all Alcoholizado">
-        <img class="img-fluid" src="Alcoholizado3.jpg" alt="Card image cap" width="300">
+        <img class="img-fluid" src="Animales Silvestres/Alcoholizado3.jpg" alt="Card image cap" width="300">
     </div>
     <!-- Grid column -->
     <!-- Grid column -->
     <div class="m-3 pics animation all Maduro">
-        <img class="img-fluid" src="Maduro3.jpg" alt="Card image cap" width="225">
+        <img class="img-fluid" src="Animales Silvestres/Maduro3.jpg" alt="Card image cap" width="225">
     </div>
     <!-- Grid column -->
     <!-- Grid column -->
     <div class="m-3 pics animation all Maduro">
-        <img class="img-fluid" src="Maduro4.jpg" alt="Card image cap" >
+        <img class="img-fluid" src="Animales Silvestres/Maduro4.jpg" alt="Card image cap" >
     </div>
     <!-- Grid column -->
     <!-- Grid column -->
     <div class="m-3 pics animation all Joven">
-        <img class="img-fluid" src="Joven4.jpg" alt="Card image cap"width="300">
+        <img class="img-fluid" src="Animales Silvestres/Joven4.jpg" alt="Card image cap"width="300">
     </div>
     <!-- Grid column -->
 
