--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </nav>
 <div class="jumbotron bg-white" id="Jumbo">
   <div class="container-fluid text-center"style="background-color:#8cff66;">
-    <h1 class="display-1">Animales silvestres</h1>
+    <h1 class="display-1">Los magnates de la selva</h1>
     <div  id="Lanegraimages" class="carousel slide" data-ride="carousel">
    <div class="carousel-inner">
      <div class="carousel-item active">
