--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-sm bg-dark text-white fixed-top">
-<a class="nav-brand text-white" href="#Jumbo">Animalitos Inc.</a>
+<a class="nav-brand text-white" href="#Jumbo">
+  <img src"Animales Silvestres/Icono.jpg">
+  </a>
 <ul class="navbar-nav">
   <li class="nav-item">
     <a class="nav-link text-white" href="#Que_son" onclick="TitleSpace()">¿Que son?</a>
