--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <body>
 <nav class="navbar navbar-expand-sm bg-dark text-white fixed-top">
 <a class="nav-brand text-white" href="#Jumbo">
-  <img src"Animales Silvestres/Icono.jpg">
+  <img src"Animales Silvestres/Icono.jpg" width="50" height="50">
   </a>
 <ul class="navbar-nav">
   <li class="nav-item">
-    <a class="nav-link text-white" href="#Que_son" onclick="TitleSpace()">¿Que son?</a>
+    <a class="nav-link text-white" href="#Que_son">¿Que son?</a>
   </li>
   <li class="nav-item">
     <a class="nav-link text-white" href="#Donde_se_encuentran">¿Donde se encuentran?</a>
