--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 <nav class="navbar navbar-expand-sm bg-dark text-white fixed-top">
 <a class="nav-brand text-white" href="#Jumbo">
-  <img src"Animales Silvestres/Icono.jpg" width="50" height="50">
+  <img src="Icono.jpg" width="50" height="50">
   </a>
 <ul class="navbar-nav">
   <li class="nav-item">
