--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-sm bg-dark text-white fixed-top">
-<a class="nav-brand text-white" href="#Jumbo">
+<a class="navbar-brand text-white" href="#Jumbo">
   <img src="Icono.jpg" width="50" height="50">
   </a>
 <ul class="navbar-nav">
