--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     exorbitantes de calorias que esta especie consume en un día.</p>
   </div>
   </div>
-  <h1 id="Donde_se_encuentran">¿Dónde se encuentran?</h1>
+  <h1 id="Donde_se_encuentran" class="mt-2">¿Dónde se encuentran?</h1>
   <div class="row">
     <div class="col-8">
     <p>Como previamente afirmó Stephen Hawking este espécimen es fácilmente hallado en bares, en antros y en fiestas juveniles. El motivo principal de su aparición en estas ocaciones es la abundante existencia
@@ -96,7 +96,7 @@
      <img src="Animales Silvestres/Negra salvaje.jpg" class="img-responsive" width="300" height="300">
     </div>
   </div>
-  <h1 id="Que_comen">¿Qué comen?</h1>
+  <h1 id="Que_comen" class="mt-2">¿Qué comen?</h1>
   <div class="row">
     <div class="col-3">
     <div id="accordion">
@@ -183,7 +183,7 @@
     </div>
   </div>
   </div>
-  <h1 id="Como_atraparlos">¿Cómo atraparlos?</h1>
+  <h1 id="Como_atraparlos" class="mt-2">¿Cómo atraparlos?</h1>
   <div class="row">
     <div class="col-12">
       <p> Para atrapar a este animal se requiere de carnada y se sugiere que sea en el día, ya que es dificil verlo en la noche. Se puede atraer con cualquiera de de sus fuentes
@@ -192,7 +192,7 @@
         por lo que se le debe apresar cuando este distraido viendo a las feminas.
           </div>
   </div>
-  <h1 id="Avistamientos">Avistamientos</h1>
+  <h1 id="Avistamientos" class="mt-2">Avistamientos</h1>
   <!-- Grid row -->
 <div class="row">
 
